fix: clear all BLOCKER and CRITICAL Sonar findings on the diff
After enabling the SonarQube gate, the first scan flagged 1 BLOCKER
and 1 CRITICAL (plus 4 MINOR bugs and 1 dead test).

- formats/json/JsonSerializer: extract the proxy OutputStream and the
  generator-owning writer into named private static classes
  (FlushSuppressingStream, JsonStreamWriter). Resource ownership is
  now field-scoped, so the JsonGenerator's lifecycle is clear to
  static analysis and to readers. Clears java:S2095 (BLOCKER).
- cli/ExecuteCommand: resolve ROOT_LOGGER_NAME via org.slf4j.Logger
  (the constant's declaring type) instead of the logback subclass —
  same value, but the qualifier matches the API contract. Clears
  java:S3252 (CRITICAL).
- cli/ExecuteCommand: use Math.clamp(value, min, max) introduced in
  Java 21 instead of nested Math.max/Math.min (java:S6885).
- formats/avro/{AvroSerializer,SchemaRegistryAvroSerializer},
  formats/protobuf/ProtobufSerializer: suppress java:S3077 on the
  volatile DCL fields with a comment explaining why (immutable after
  publication; volatile is for safe publication of fully-built
  objects, not for mutation).
- EnvSecretResolverTest: drop shouldReturnSingletonInstance — the
  assertion compared INSTANCE to itself, a tautology that exercised
  nothing (java:S5863).
- .gitignore: exclude .scannerwork/ — local scanner working dir,
  never a checked-in artifact.

Quality gate after rescan: BLOCKER=0, CRITICAL=0, new_coverage=88.9%.
Remaining open findings are MAJOR/MINOR style issues in tests
(AssertJ/JUnit conventions) and unreviewed security hotspots.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>